# earthwork-llm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-vlm.txt  requirements.txt
config/training/: v10_control_replay.yaml  v10_discrimination_bf16.yaml  v10_factorial_neg.yaml  v10_factorial_pos.yaml
data/reference/: published_sites.csv
data/refind_utm/: mound_relief_strata.csv  refind_utm.csv  yazoo_decoy_control.csv  yazoo_decoy_summary.json
data/ring_negative_control/: ring_negative_control.csv  ring_negative_control_summary.json
data/shield_eskew/: proximity_summary.json  shield_eskew_proximity.csv  shield_eskew_results.csv
data/v10_eval/: agisland_keeps_v10.csv  eskew_ctrl.csv  eskew_factorial_neg.csv  eskew_factorial_pos.csv  eskew_v10.csv  eskew_v10_ctxbusy.csv  eskew_v10_ctxquiet.csv  eskew_v10_detailmask.csv  eskew_v10_occluded.csv  eskew_v10_rep2.csv  eskew_v10_rep3.csv  eskew_v91same.csv  eskew_v91same_rep2.csv  jaketown_survivors_v10.csv  salience_eskew.csv  salience_eskew_base.csv  salience_eskew_v91.csv  sc_v10.csv  (+13 more)
docs/: DATA_POLICY.md  MANUSCRIPT.md  REPRODUCTION_GUIDE.md
scripts/: build_correct.py  build_review.py  context_sheet.py  correct_server.py  demo_terrain_query.py  ditch_enclosure_query.py  earthwork_query.py  gen_fig6_utm.py  generate_discrimination_fig.py  generate_discrimination_v10.py  generate_explanatory_figures.py  generate_fig_salience.py  generate_jaketown_shield_fig.py  generate_lake_george_fig.py  generate_multiview_fig.py  generate_paper_map.py  generate_shell_ring_fig.py  generate_winterville_fig.py  generate_workflow_fig.py  generate_yazoo_noise_map.py  generate_zero_shot_fig.py  lrm_baseline.py  mound_relief_strata.py  refind_utm.py  regional_earthwork_scanner.py  review_server.py  ring_negative_control.py  serve_yazoo_model.sh  shell_ring_test.py  shield_eskew_proximity.py  shield_eskew_test.py  systematic_earthwork_search.py  vlm_ablation.py  vlm_ablation_armc.py  vlm_ablation_context.py  vlm_detection_arm.py  vlm_eval_v10.py  vlm_eval_v10_occlusion.py  vlm_eval_v10_stream.py  vlm_eval_v10_variants.py  (+2 more)
(+25 files in other folders)
