[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "earthwork-llm"
version = "0.1.0"
description = "Label-free / zero-shot LiDAR screening for pre-European earthen mounds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "C. P. Lipo" }, { name = "D. S. Davis" }, { name = "R. J. DiNapoli" },
]
dependencies = [
  "numpy>=1.26", "scipy>=1.11", "rasterio>=1.3", "requests>=2.31",
  "matplotlib>=3.7", "pandas>=2.0", "geopandas>=0.14", "shapely>=2.0",
  "pyproj>=3.6", "opencv-python-headless>=4.10", "Pillow>=10.0", "laspy>=2.5",
]

[project.optional-dependencies]
# The core (3DEP ImageServer scan + detector + shield + validation) needs only
# the base dependencies. These extras enable optional paths:
quads = ["pdf2image>=1.17"]                 # build the USGS-quad "noise map" for the shield (also needs poppler + PDAL via conda)
gcs = ["google-cloud-storage>=2.10"]        # write scan outputs to a Google Cloud bucket
vlm = ["vllm>=0.6", "torch>=2.4", "transformers>=4.45", "peft>=0.13"]  # serve the interpretation layer

[tool.setuptools.packages.find]
where = ["src"]
